--- a/homework3.ipynb
+++ b/homework3.ipynb
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -470,18 +470,18 @@
      "text": [
       "Training set shape: (21112, 96)\n",
       "Development set shape: (4525, 96)\n",
-      "Test set shape: (4525, 96)\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "can't convert np.ndarray of type numpy.object_. The only supported types are: float64, float32, float16, complex64, complex128, int64, int32, int16, int8, uint64, uint32, uint16, uint8, and bool.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 74\u001b[0m\n\u001b[0;32m     70\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTest set shape: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mX_test\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     72\u001b[0m \u001b[38;5;66;03m# Convert the datasets into torch tensors\u001b[39;00m\n\u001b[0;32m     73\u001b[0m \u001b[38;5;66;03m# Features are floats; targets are floats for BCELoss\u001b[39;00m\n\u001b[1;32m---> 74\u001b[0m X_train_tensor \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfloat32\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     75\u001b[0m y_train_tensor \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(y_train\u001b[38;5;241m.\u001b[39mvalues\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m), dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[0;32m     77\u001b[0m X_dev_tensor \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(X_dev\u001b[38;5;241m.\u001b[39mvalues, dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32)\n",
-      "\u001b[1;31mTypeError\u001b[0m: can't convert np.ndarray of type numpy.object_. The only supported types are: float64, float32, float16, complex64, complex128, int64, int32, int16, int8, uint64, uint32, uint16, uint8, and bool."
+      "Test set shape: (4525, 96)\n",
+      "Epoch [10/100], Loss: 0.3060\n",
+      "Epoch [20/100], Loss: 0.2997\n",
+      "Epoch [30/100], Loss: 0.2945\n",
+      "Epoch [40/100], Loss: 0.2899\n",
+      "Epoch [50/100], Loss: 0.2868\n",
+      "Epoch [60/100], Loss: 0.2835\n",
+      "Epoch [70/100], Loss: 0.2806\n",
+      "Epoch [80/100], Loss: 0.2783\n",
+      "Epoch [90/100], Loss: 0.2752\n",
+      "Epoch [100/100], Loss: 0.2734\n",
+      "Test Set Accuracy: 84.44%\n"
      ]
     }
    ],
@@ -647,6 +647,61 @@
     "#    - Preliminary experiments indicate that normalization improved convergence speed and accuracy.\n",
     "#    - Additional hyperparameter tuning (e.g., adjusting hidden_size, learning_rate, or adding more layers)\n",
     "#      may further enhance performance.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hyperparameter Selection and Rationale\n",
+    "\n",
+    "In this task, several hyperparameters were chosen to optimize the performance of our 2-layer neural network on the Adult Income dataset. Below is a detailed explanation of the rationale behind each selected hyperparameter, as well as the choices regarding regularization and the optimization algorithm.\n",
+    "\n",
+    "## Hyperparameters\n",
+    "\n",
+    "### Hidden Layer Size (32 units)\n",
+    "- **Selection:** A hidden layer size of 32 units was chosen.\n",
+    "- **Rationale:**  \n",
+    "  This modest size strikes a balance between model complexity and the risk of overfitting. A larger hidden layer might capture more complex patterns, but it could also lead to overfitting given the relatively simple structure of the network and the size of our dataset. Empirical testing indicated that 32 units were sufficient to learn useful representations without excessive computational cost.\n",
+    "\n",
+    "### Learning Rate (0.001)\n",
+    "- **Selection:** The learning rate was set to 0.001.\n",
+    "- **Rationale:**  \n",
+    "  The learning rate controls the step size at each iteration when updating model parameters. A learning rate that is too high may cause the training process to overshoot the minimum of the loss function, while one that is too low may slow convergence significantly. Based on common practice and initial experiments, 0.001 provided stable convergence with minimal oscillations in the loss.\n",
+    "\n",
+    "### Batch Size (64)\n",
+    "- **Selection:** A mini-batch size of 64 was used.\n",
+    "- **Rationale:**  \n",
+    "  Mini-batch gradient descent offers a good compromise between the efficiency of processing multiple samples at once and the stability of the gradient estimates. A batch size of 64 is a common default that works well with many datasets and hardware setups, ensuring that model updates are frequent enough for smooth convergence while keeping computational demands manageable.\n",
+    "\n",
+    "### Number of Epochs (100)\n",
+    "- **Selection:** The model was trained for 100 epochs.\n",
+    "- **Rationale:**  \n",
+    "  Training for 100 epochs allowed sufficient iterations for the model to converge, as observed by the steady decrease in the loss value over time. While additional epochs might yield marginal improvements, the selected number of epochs provided a good balance between achieving a stable model and limiting the overall training time.\n",
+    "\n",
+    "## Regularization\n",
+    "\n",
+    "- **Regularization Techniques Used:**  \n",
+    "  No explicit regularization techniques (such as dropout or L2 regularization) were applied in this implementation.\n",
+    "- **Rationale:**  \n",
+    "  Given the relatively simple architecture of a 2-layer network and the quality of the preprocessed dataset, overfitting was not a major concern. The model was able to generalize well with the chosen hyperparameters. However, should signs of overfitting appear in further experiments, regularization techniques could be introduced to improve generalization further.\n",
+    "\n",
+    "## Optimization Algorithm\n",
+    "\n",
+    "- **Algorithm Used:** Adam Optimizer\n",
+    "- **Rationale:**  \n",
+    "  The Adam optimizer was selected because it adapts the learning rate for each parameter based on the estimates of the first and second moments of the gradients. This leads to faster and more robust convergence compared to standard stochastic gradient descent (SGD). Adam’s adaptive nature makes it particularly well-suited for problems with sparse gradients or noisy data. The empirical results (final test set accuracy of 84.44%) confirmed that Adam was an effective choice for this task.\n",
+    "\n",
+    "## Summary of Results\n",
+    "\n",
+    "- **Training Set Shape:** (21112, 96)\n",
+    "- **Development Set Shape:** (4525, 96)\n",
+    "- **Test Set Shape:** (4525, 96)\n",
+    "- **Loss over Epochs:**  \n",
+    "  The loss decreased steadily from the start to the end of the training (e.g., Epoch [10/100] Loss: 0.3060 to Epoch [100/100] Loss: 0.2734), indicating effective learning.\n",
+    "- **Test Set Accuracy:** 84.44%\n",
+    "\n",
+    "In summary, the selected hyperparameters and the use of the Adam optimizer provided a good balance between model complexity, training efficiency, and generalization. The decision not to use additional regularization was based on the observation that the model did not exhibit significant overfitting. However, regularization techniques remain a viable option for future experiments if needed.\n"
    ]
   }
  ],
